[package]
name = "h2c-rust-ref"
version = "8.0.0"
authors = ["armfazh <armfazh@cloudflare.com>"]
edition = "2018"
description = "hash to curve reference implementation"
keywords = ["elliptic curve", "math", "crypto", "ecc", "elliptic", "hash to curve"]
categories = ["cryptography"]
readme = "readme.md"
license = "BSD-3-Clause"

[[bench]]
name = "h2c"
harness = false

[dependencies]
atomic_refcell = "0.1.6"
digest = "0.8.1"
lazy_static = "1.4.0"
num-bigint = "0.2.6"
sha2 = "0.8.2"
sha3 = "0.8.2"
redox-ecc = { git = "https://github.com/armfazh/redox-ecc", version = "0.2.2" }

[dev-dependencies]
criterion = "0.3.2"
hex = "0.4"
libtest-mimic = "0.2.0"
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"
