[package]
name = "h2c-rust-ref"
version = "14.0.0"
authors = ["Armando Faz Hernandez"]
edition = "2021"
description = "hash to curve reference implementation"
keywords = ["elliptic curves", "math", "crypto", "ecc", "elliptic", "hash to curve"]
categories = ["cryptography"]
readme = "readme.md"
license = "BSD-3-Clause"

[[bench]]
name = "h2c"
harness = false

[dependencies]
atomic_refcell = "0.1.13"
digest = "0.10.7"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
sha2 = "0.10.8"
sha3 = "0.10.8"
redox-ecc = { git = "https://github.com/armfazh/redox-ecc", version = "0.2.3" }

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
libtest-mimic = "0.6.1"
serde = "1.0.189"
serde_json = "1.0.107"
serde_derive = "1.0.189"
